# bazel-generating-files-example

./: .bazeliskrc  .gitignore  MODULE.bazel  README.md
apps/playground/: BUILD.bazel  generator.sh
apps/playground/source/: main.cpp
libs/sdk/: BUILD.bazel
libs/sdk/sdk/model/: Object.cpp  Object.hpp
